# PokoPaper

./: .env.example  .gitignore  MEMORY_STORE_LOCK_INTERVIEW_QA.md  MEMORY_SYSTEM_RESUME.md  MEMORY_SYSTEM_TECHNICAL_REPORT_CN.md  Makefile  README.md
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: paper_companion_agent.py
apps/api/app/agents/prompts/: paper_analysis_prompt.py
apps/api/app/api/v1/: chat.py  ingestion.py  memory.py  overview.py  papers.py  recommendations.py  router.py
apps/api/app/core/: config.py
apps/api/app/db/: bootstrap.py  session.py
apps/api/app/models/: artifacts.py  paper.py
apps/api/app/repositories/: factory.py  local_store.py  postgres_store.py
apps/api/app/schemas/: chat.py  common.py  memory.py  models.py  overview.py  papers.py
apps/api/app/services/: mock_data.py  paper_entity_memory.py  short_term_memory.py
apps/api/app/services/ingestion/: overview_generator.py  parser.py  service.py
apps/api/app/services/llm/: service.py
apps/api/app/services/memory/: long_term_write_policy.py  service.py  write_policy.py
apps/api/app/services/papers/: service.py
apps/api/app/services/rag/: service.py
apps/api/app/services/recommendations/: service.py
apps/api/pokomon_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_long_term_write_policy.py  test_memory_scope.py  test_title_extraction.py
apps/web/: README.md  (+3 more)
docs/: architecture.md  memory-design.md  memory-implementation.md  memory-mechanism-phase6.md  memory_write_policy.md  mvp-roadmap.md  rag-design.md
(+42 files in other folders)
