[project]
name = "pokomon-api"
version = "0.1.0"
description = "FastAPI backend for Pokomon"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.1.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "openai>=1.54.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*", "tests*"]
